@@ -1,3 +1,7 @@
+2007-07-11  Satoshi Nakagawa <artension@gmail.com>
+
+	Implemented drag and drop operations on channels tab, server dialog.
+
 2007-07-10  Satoshi Nakagawa <artension@gmail.com>
 
 	Completed channels tab on server dialog.
